@@ -27,3 +27,7 @@
 2014-2-28 Joe Jevnik <joejev@gmail.com>
 	* src/ui/screen.h, src/ui/screen.c: Started working on the screen UI.
 	* scr/common.h: Added the screen declerations.
+
+2014-3-3 Joe Jevnik <joejev@gmail.com>
+	* src/ui/screen.h, src/ui/screen.c: Got message log and static UI frame.
+	* TODO: Updated TODO
